hard-gists/1760854/run.log
=== Docker Run Log for 1760854 ===
Started at: Mi 29. Okt 12:27:09 CET 2025

[2025-10-29 12:27:10] START: Running container for 1760854
[2025-10-29 12:27:10] SUCCESS: Container fed4a604ffb6cb04470324dd98443ae60a05a8cf61d4f46b6572acc60f59947f started for 1760854
=== Container logs for 1760854 ===
  File "/snippet.py", line 11
    print branch.name
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1760854 ===
[2025-10-29 12:27:12] INFO: Container fed4a604ffb6cb04470324dd98443ae60a05a8cf61d4f46b6572acc60f59947f has stopped
